Removing obsolete services and models